Fix mobile visibility.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -291,6 +291,8 @@ hr {
 	}
 	main {
 		padding: 0.5em;
+		width: 90%;
+		margin: 0 auto;
 	}
 }
 
